详情页面使用acitivty方式开发基本完工

--- a/res/layout/fragment_left_menu.xml
+++ b/res/layout/fragment_left_menu.xml
@@ -4,11 +4,15 @@
     android:layout_height="wrap_content" >
 
     <ListView
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
         android:id="@+id/lv_left_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollingCache="@null"
-        android:divider="#ff0000"
+        android:divider="#E0E0E0"
+        android:dividerHeight="1dp"
          />
 
 </FrameLayout>
