--- a/res/layout/activity_app_detail.xml
+++ b/res/layout/activity_app_detail.xml
@@ -1,42 +1,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
-    <include 
-        android:id="@+id/loading"
-        layout="@layout/loadpage_loading"
-        />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_content"
+    <FrameLayout
+        android:id="@+id/fl_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
-    <LinearLayout
-        android:id="@+id/ll_buttons"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="#515151"
-        android:orientation="horizontal"
-        android:padding="3dp" >
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="btn1" />
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="btn2" />
-
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="btn3" />
-    </LinearLayout>
+        android:layout_height="match_parent" >
+    </FrameLayout>
 
 </RelativeLayout>
