--- a/res/layout/fragment_detail.xml
+++ b/res/layout/fragment_detail.xml
@@ -5,8 +5,10 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="match_parent" 
+        android:layout_marginBottom="50dp"
+        />
+    
     <LinearLayout
         android:id="@+id/ll_buttons"
         android:layout_width="match_parent"
