--- a/res/layout/fragment_detail.xml
+++ b/res/layout/fragment_detail.xml
@@ -5,10 +5,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" 
-        android:layout_marginBottom="50dp"
-        />
-    
+        android:layout_height="match_parent"
+        android:layout_marginBottom="50dp" />
+
     <LinearLayout
         android:id="@+id/ll_buttons"
         android:layout_width="match_parent"
@@ -19,22 +18,25 @@
         android:padding="3dp" >
 
         <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="btn1" />
+            android:id="@+id/btn_collection"
+            android:layout_width="68dp"
+            android:layout_height="40dp"
+            android:background="@drawable/selecter_detail_button"
+            android:text="收藏" />
 
         <Button
+            android:id="@+id/btn_download"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_weight="1"
-            android:text="btn2" />
+            android:text="下载" />
 
         <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="btn3" />
+            android:id="@+id/btn_share"
+            android:layout_width="68dp"
+            android:layout_height="40dp"
+            android:background="@drawable/selecter_detail_button"
+            android:text="分享" />
     </LinearLayout>
 
 </RelativeLayout>
