--- a/res/layout/item_detail_mid_high.xml
+++ b/res/layout/item_detail_mid_high.xml
@@ -42,7 +42,7 @@
                 android:layout_marginRight="8dp"
                 android:clickable="false"
                 android:focusable="false"
-                android:src="@drawable/arrow_down" />
+                android:src="@drawable/arrow_up" />
         </RelativeLayout>
 
         <LinearLayout
