--- a/res/layout/item_subject.xml
+++ b/res/layout/item_subject.xml
@@ -16,12 +16,13 @@
         android:background="@drawable/seleter_app_bg"
         android:orientation="vertical" >
 
-        <ImageView
+        <!-- 使用自适应长宽的ImageView -->
+
+        <com.example.gooleplay.view.AdaptImageView
             android:id="@+id/iv_sub_pic"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:scaleType="fitXY"
-            />
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY" />
 
         <TextView
             android:id="@+id/txt_sub_des"
