--- a/res/layout/fragment_detail.xml
+++ b/res/layout/fragment_detail.xml
@@ -24,12 +24,29 @@
             android:background="@drawable/selecter_detail_button"
             android:text="收藏" />
 
-        <Button
-            android:id="@+id/btn_download"
+        
+        <FrameLayout
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="40dp" 
             android:layout_weight="1"
-            android:text="下载" />
+            >
+            
+            <ProgressBar
+                android:id="@+id/pb_progress"
+                style="@android:style/Widget.ProgressBar.Horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+            
+
+            <Button
+                android:id="@+id/btn_download"
+                android:background="@null"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="下载" />
+
+        </FrameLayout>
 
         <Button
             android:id="@+id/btn_share"
