--- a/res/layout/item_home.xml
+++ b/res/layout/item_home.xml
@@ -57,13 +57,28 @@
 
         <ImageView
             android:id="@+id/btn_download"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_alignParentRight="true"
-            android:layout_margin="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="15dp"
             android:background="@drawable/ic_download"
             android:clickable="true"
+            android:scaleType="fitXY"
             android:focusable="true" />
+        
+        <TextView 
+            android:id="@+id/tv_state"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:textSize="11sp"
+            android:text="下载"
+            android:layout_below="@id/btn_download"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="23dp"
+            android:textColor="#ff7a7a7a"
+            android:layout_marginTop="4dp"
+            />
 
         <View
             android:id="@+id/item_divider"
